--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p class="text-[#F68A1F]">SECURITY</p>
                 <p>SOLUTION</p>
             </div>
-            <div class="flex max-lg:flex-wrap gap-[100px] my-[100px] justify-center">
+            <div class="flex flex-wrap gap-[100px] my-[100px] justify-center">
 
                 <div
                     class="text-center w-[400px] h-[320px] rounded-[15px] border-[#FFFFFF] solid border-[1px] bg-[#FFFFFF]">
