--- a/cctvSec.html
+++ b/cctvSec.html
@@ -512,7 +512,7 @@
 
         <div class="flex flex-wrap justify-between mx-[50px]">
             <div class="border border-[#F4F4F4] w-[370px] h-[570px] my-[50px] rounded-[6px] bg-[#F4F4F4] shadow-2xl">
-                <p class="font-sans font-semibold text-[35px] leading-[52.5px] text-center shadow-2xl">Premium Speed</p>
+                <p class="font-sans font-semibold text-[35px] leading-[52.5px] text-center">Premium Speed</p>
 
                 <div class="flex justify-between px-[40px] text-[#757575] border-b leading-9">
                     <p>Speed</p>
